<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.solmayra.mercadofit.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/market"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnregistrar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnconsultar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consultar"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnlistar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listar"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnacerca"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acerca"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
